# pnml2pins

./: .gitignore  README.md  configure.ac
m4/: acx_LTSmin.m4
src/: Makefile.am  pnml-pins.c  pnml-pins.h  pnml2pins  pnml2pins.in  pnml2pins.py
